feat: Moving ToC and time estimates out of the content

--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,10 @@ defaults:
       path: _posts
     values:
       layout: post
+      toc: true
 
 plugins:
+  - jekyll-toc
   - jekyll-sitemap
   - jekyll-readme-index
   - jekyll-default-layout
